# ChangeCoupling_StructuralDependencies_Analyzer

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sonarcloud.yml
CCSD/: CCSD.py  celery_app.py  git_repository_mining_util.py  git_repository_mining_util_redis.py  git_util.py  indexing.py  models.py  project_configs.py  repository_mining.py  repository_mining_util.py  test_app.py  utils_py.py  utils_sql.py
analytics/: coupling_association_rules_utils.py
config/: secret.ini
notebooks/: association_rules_find_thresholds.ipynb  change_proneness.ipynb  structural_change_coupling.ipynb
project_config/: PX4-Autopilot.pconfig  flone.pconfig  glucosio.pconfig  glucosio_large_commits.pconfig  glucosio_small.pconfig
stubs/celery/: __init__.pyi  result.pyi
stubs/pydriller/: repository.pyi
stubs/pydriller/domain/: commit.pyi  developer.pyi
tests/: linter_test.py
