[tool.poetry]
name = "changeanalyzersd"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10,<3.11"
PyDriller = "^2.1"
celery = {extras = ["redis"], version = "^5.2.3"}
ipykernel = "^6.15.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
scipy = "^1.8.1"
Jinja2 = "^3.1.6"
python-stopwatch = "^1.0.4"
apyori = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
mypy = "^0.931"
pytest = "^7.0.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    'linter: all tests that run external linters which are usually slow',
]
addopts = [
    # show the slowest 10 tests
    '--durations=10',
]

[tool.pylint.messages_control]
enable = "all"
disable = "missing-docstring,suppressed-message,locally-disabled,too-few-public-methods,fixme"

max-line-length = 150

[tool.pylint.basic]
good-names = "changeAnalyzerSD,df,dt,g,f,fi,fc,cm"
max-args = 10
max-locals = 20

[tool.mypy]
show_error_codes = true
show_absolute_path = true
show_column_numbers = true

strict_optional = true
warn_no_return = true
disallow_any_unimported = true

# Across versions of mypy, the flags toggled by --strict vary.  To ensure
# we have reproducible type check, we instead manually specify the flags
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

# Disallow any
disallow_any_decorated = true
disallow_any_explicit = true
